--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task Manager</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
+    <title>Auto AIM-FIRE</title>
+    {% include 'headlinks.html' %}
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </head>
 <body>
@@ -19,20 +16,21 @@
     </div>
 
     <div class="container" id="main-content">
-        <div class="header-row">
-            <div class="logo-stack">
-                <img src="{{ url_for('static', filename='cei-social.png') }}" alt="Logo" class="logo-img">
-                <img src="{{ url_for('static', filename='CEI-QA-RPA-Logo-Trans.png') }}" alt="Logo" class="logo-img">
-            </div>
+        {% include 'header.html' %}
+
+        {% include 'sidenav.html' %}
+
+        <div class="page-title">
+            <h1 class="page-heading">Automation Test Scripts</h1>
         </div>
 
         <div class="actions-bar">
             <input type="text" id="task-search" placeholder="Search tasks, description and tags...">
             <div class="actions-left">
                 <span id="selected-count" class="selected-count">Tasks Selected: 0</span>
+                <button class="run-button" id="run-selected-btn" type="button">Execute Selected</button>
+                <button class="run-button" id="run-all-btn" type="button">Execute All</button>
             </div>
-            <button class="run-button" id="run-selected-btn" type="button">Execute Selected</button>
-            <button class="run-button" id="run-all-btn" type="button">Execute All</button>
             <div class="actions-right">
                 <button class="create-button" onclick="openCreateModal()">Create Task</button>
             </div>
@@ -46,10 +44,12 @@
                     <input type="checkbox" class="task-checkbox" value="{{ task['Task name'] }}">
                 </div>
                 <p class="task-card-description">{{ task["Task description"] }}</p>
-                <p><strong>Tags:</strong> {% for tag in task["Tags"] %}
-    <span class="tag-pill">{{ tag }}</span>
-  {% endfor %}
-</p>
+                <p>
+                    <strong>Tags:</strong> 
+                    {% for tag in task["Tags"] %}
+                    <span class="tag-pill">{{ tag }}</span>
+                    {% endfor %}
+                </p>
                 <div class="task-card-buttons" style="justify-content: space-between;">
                     <div class="task-card-actions">
                         <button class="icon-btn edit-icon"
@@ -84,28 +84,6 @@
             </div>
             {% endfor %}
         </div>
-
-        <div class="side-nav">
-    <a class="nav-link" href="/" title="Home">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-            <path d="M 12 2 A 1 1 0 0 0 11.289062 2.296875 L 1.203125 11.097656 A 0.5 0.5 0 0 0 1 11.5 A 0.5 0.5 0 0 0 1.5 12 L 4 12 L 4 20 C 4 20.552 4.448 21 5 21 L 9 21 C 9.552 21 10 20.552 10 20 L 10 14 L 14 14 L 14 20 C 14 20.552 14.448 21 15 21 L 19 21 C 19.552 21 20 20.552 20 20 L 20 12 L 22.5 12 A 0.5 0.5 0 0 0 23 11.5 A 0.5 0.5 0 0 0 22.796875 11.097656 L 12.716797 2.3027344 A 1 1 0 0 0 12.710938 2.296875 A 1 1 0 0 0 12 2 z"></path>
-        </svg>
-        <span class="nav-label">Home</span>
-    </a>
-    <a class="nav-link" href="/generate" title="Generate">
-        <span class="nav-icon">&#9889;</span>
-        <span class="nav-label">Generate</span>
-    </a>
-    <a class="nav-link" href="/history" title="History">
-        <span class="nav-icon">&#128340;</span>
-        <span class="nav-label">History</span>
-    </a>
-    <a class="nav-link" href="/settings" title="Settings">
-        <span class="nav-icon">&#9881;</span>
-        <span class="nav-label">Settings</span>
-    </a>
-</div>
-
 
     <!-- Edit Modal -->
     <div id="edit-modal" class="modal">
